# pironman-u1

./: README.md  install.py  pyproject.toml
docs/source/: conf.py  index.rst  quick_user_guide.rst  what_do_we_need.rst
docs/source/hardware/: about_hardware.rst  battery.rst  fan.rst  features.rst  main_board.rst  nvme_pip.rst  power_button.rst
docs/source/home_assistant/: ha_addon.rst  ha_dashboard.rst  ha_mqtt.rst  home_assistant.rst  install_hassos.rst  set_up_homeass.rst
docs/source/pi_start/: installing_the_os.rst  remote_desktop.rst  set_up_your_raspberry_pi.rst
examples/: read_all.py  read_individual.py  set_shutdown_percentage.py
pironman_u1/: __init__.py  logger.py  pironman_u1.py
tools/: sf_installer.py
